# AdventOfCode

./: CMakeLists.txt  README.md  meson.build
2021/: meson.build
2021/Day_01/: main.cpp
2021/Day_02/: main.cpp
2022/: CMakeLists.txt  meson.build
2022/Day_01/: main.cpp
2022/Day_02/: main.cpp
2022/Day_03/: main.cpp
2022/Day_04/: main.cpp
2022/Day_05/: main.cpp
2022/Day_06/: main.cpp
2022/Day_07/: main.cpp
2022/Day_08/: main.cpp
2022/Day_09/: main.cpp
2022/Day_10/: main.cpp
2022/Day_11/: main.cpp
2022/Day_12/: main.cpp
2022/Day_13/: main.cpp
2022/Day_14/: main.cpp
2022/Day_15/: main.cpp
2023/: meson.build
2023/Day_01/: main.cpp
2023/Day_02/: main.cpp
2023/Day_03/: main.cpp
2023/Day_04/: main.cpp
2023/Day_05/: main.cpp
2023/Day_06/: main.cpp
2023/Day_07/: main.cpp
2023/Day_08/: main.cpp
2023/Day_09/: main.cpp
2023/Day_10/: main.cpp
2024/: CMakeLists.txt  meson.build
2024/Day_01/: main.cpp
2024/Day_02/: main.cpp
2024/Day_03/: main.cpp
2024/Day_04/: main.cpp
2024/Day_05/: main.cpp
2024/Day_06/: main.cpp
2024/Day_07/: main.cpp
2024/Day_08/: main.cpp
2024/Day_09/: main.cpp
2024/Day_10/: main.cpp
2024/Day_11/: main.cpp
2024/Day_12/: main.cpp
2025/: CMakeLists.txt
2025/Day_01/: main.cpp
2025/Day_02/: main.cpp
2025/Day_03/: main.cpp
2025/Day_04/: main.cpp
2025/Day_05/: main.cpp
2025/Day_06/: main.cpp
2025/Day_07/: main.cpp
2025/Day_08/: main.cpp
2025/Day_09/: main.cpp
2025/Day_10/: main.cpp
advent/: CMakeLists.txt  advent.cpp  concepts.cpp  defines.hpp  digits.cpp  functional.cpp  grid.cpp  math.cpp  print.cpp  puzzle_data.cpp  regular_vector.cpp  scope_guard.cpp  split_string_view.cpp  timer.cpp  type_aliases.cpp  type_traits.cpp  vector_nd.cpp  views.cpp
include/advent/: advent.hpp  assume.hpp  basic_vector.hpp  common.hpp  concepts.hpp  defines.hpp  discard.hpp  functional.hpp  grid.hpp  impl_bool_vector.hpp  includes.hpp  math.hpp  print.hpp  puzzle_data.hpp  scope_guard.hpp  split_string_view.hpp  timer.hpp  to_integral.hpp  type_aliases.hpp  type_traits.hpp  vector_nd.hpp
